--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,7 +4,8 @@
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ads": "4.4.2",
     "com.unity.ads.ios-support": "1.0.0",
-    "com.unity.cinemachine": "2.8.9",
+    "com.unity.ai.navigation": "1.1.4",
+    "com.unity.cinemachine": "2.9.5",
     "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.6.1",
