--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,7 +3,7 @@
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ads": "4.4.2",
-    "com.unity.ads.ios-support": "1.0.0",
+    "com.unity.ads.ios-support": "file:/Users/robert/SafePlace/BTS Source Code/github/com.unity.ads.ios-support/com.unity.ads.ios-support",
     "com.unity.ai.navigation": "2.0.5",
     "com.unity.cinemachine": "2.10.3",
     "com.unity.ide.visualstudio": "2.0.22",
