--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,13 @@
 {
   "dependencies": {
+    "com.unity.2d.enhancers": "1.0.0",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ads": "4.4.2",
     "com.unity.ads.ios-support": "file:/Users/robert/SafePlace/BTS Source Code/github/com.unity.ads.ios-support/com.unity.ads.ios-support",
+    "com.unity.ai.assistant": "1.0.0-pre.12",
+    "com.unity.ai.generators": "1.0.0-pre.19",
+    "com.unity.ai.inference": "2.3.0",
     "com.unity.ai.navigation": "2.0.8",
     "com.unity.cinemachine": "2.10.4",
     "com.unity.ide.visualstudio": "2.0.23",
